# ai-qa-agent

./: .coverage  Dockerfile  HANDOVER-CUMULATIVE.md  HANDOVER-PROMPT-0.1.md  README.md  automation_roadmap.md  aws_deployment_guide.md  deployment_summary_and_utilities.md  docker-compose.agent-production.yml  docker-compose.yml  e2e_functional_testing_guide.md  fix_dependencies_sprint_1_4.sh  fixed_setup_02.sh  fixed_setup_03.sh  local_deployment_guide.md  pyproject.toml  requirements-dev.txt  requirements.txt  sanity_testing_guide.md  setup_enhanced_sprint_1_4.sh  setup_prompt_1_1.sh  setup_prompt_1_2.sh  setup_prompt_1_3.sh  setup_prompt_1_4.sh  setup_script.sh  setup_sprint_2_1.sh  setup_sprint_2_2.sh  setup_sprint_2_3.sh  setup_sprint_2_4.sh  setup_sprint_3_1.sh  setup_sprint_3_2_fixed.sh  setup_sprint_3_3.sh  setup_sprint_3_3_fixed.sh  setup_sprint_3_4.sh  setup_sprint_4_1.sh  setup_sprint_4_1_complete.sh  setup_sprint_4_1_fixed.sh  setup_sprint_4_2.sh  setup_sprint_5_1.sh  setup_sprint_5_2.sh  (+11 more)
docker/agent-system/: Dockerfile.agent-base  Dockerfile.conversation  Dockerfile.learning  Dockerfile.orchestrator  Dockerfile.specialists
docker/scripts/: build_agent_images.sh  deploy_k8s.sh
docs/architecture/: agent-system-architecture.md
docs/career-portfolio/: technical-leadership-showcase.md
docs/enterprise/: enterprise-adoption-guide.md
docs/intelligence-showcase/: agent-intelligence-demonstration.md
docs/operations/: production-runbook.md
k8s/agent-system/: specialists-deployment.yaml  (+2 more)
scripts/: setup.sh
src/: main.py
tests/: conftest.py  test_basic.py
(+154 files in other folders)
